# Arithmetic_17

./: README.md  pyproject.toml  run_tests.py
prompting/: 01_Arithmetic_Git_Push_과제_보고서-prompt.md  02_Arithmetic_프로젝트_구조_설계_보고서-prompt.md  03_Arithmetic_17_구현_및_보고-prompt.md  04_Arithmetic_17_현재_작업_종합_보고-prompt.md  05_Arithmetic_17_첫_커밋_메시지_작성_보고-prompt.md  06_Arithmetic_17_GitHub_원격_연결_및_Push_보고-prompt.md  07_Arithmetic_17_과제_체크리스트_검증_보고-prompt.md
report/: 01_Arithmetic_Git_Push_과제_보고서.md  02_Arithmetic_프로젝트_구조_설계_보고서.md  03_Arithmetic_17_구현_및_보고.md  04_Arithmetic_17_현재_작업_종합_보고.md  05_Arithmetic_17_첫_커밋_메시지_작성_보고.md  06_Arithmetic_17_GitHub_원격_연결_및_Push_보고.md  07_Arithmetic_17_과제_체크리스트_검증_보고.md
src/App/: __init__.py  __main__.py
src/Cli/: __init__.py  console_runner.py  expression_parser.py
src/Common/: __init__.py  divide_by_zero_exception.py  validation_messages.py
src/Domain/: __init__.py  binary_expression.py  calculation_result.py  operation.py
src/Services/: __init__.py  arithmetic_calculator.py
tests/Cli.Tests/: __init__.py  test_expression_parser.py
tests/Domain.Tests/: __init__.py  test_domain.py
tests/Services.Tests/: __init__.py  test_arithmetic_calculator.py
