[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "arithmetic-17"
version = "0.1.0"
description = "Layered calculator (App / Cli / Domain / Services / Common)"
requires-python = ">=3.10"

# 개발: `src` 는 `run_tests.py`에서 임시로 `sys.path`에 넣거나, 실행 시
# `PYTHONPATH=src` (예: `py -m App`).

